feat: :sparkles: Include create books operation and define update operation
