# driven/repository-sql/src/main/java/com/library/manager/driven/repositories/mappers/EditorialEntityMapper.java
@@ -1,14 +1,0 @@
-package com.library.manager.driven.repositories.mappers;
-
-import com.library.manager.domain.Editorial;
-import com.library.manager.driven.repositories.models.EditorialEntity;
-import org.mapstruct.Mapper;
-
-@Mapper(componentModel = "spring")
-public interface EditorialEntityMapper {
-
-    Editorial toDomain(EditorialEntity editorialEntity);
-
-    EditorialEntity toEntity(Editorial editorial);
-
-}
